Fix for point 2 NZ payment section - suffix is truncated

--- a/src/modules/salesSettings/salesSettingsDetail/components/NzAccountNumberInputs.module.css
+++ b/src/modules/salesSettings/salesSettingsDetail/components/NzAccountNumberInputs.module.css
@@ -28,5 +28,5 @@
 }
 
 .suffix {
-  width: 5rem;
+  width: 6rem;
 }
